--- a/config/keywords.yaml
+++ b/config/keywords.yaml
@@ -2,6 +2,9 @@
 # - 모든 스파이더에서 알림 기준으로 사용되는 목록입니다.
 # - 기본 정책: 타겟 매칭 시 알림, 조건부 키워드는 타겟과 함께 있을 때만 알림 전송
 
+rules:
+  require_target: false # True면 타겟 키워드(기업명) 없으면 무조건 드롭됨. False면 조건부 키워드만 있어도 수집.
+
 targets:
 # 기업, 국가 등 타깃 키워드 설정
 # - 타겟 단독 매칭도 알림합니다. (CRITICAL)
