스파이더 추가

--- a/config/crawler_config.yaml
+++ b/config/crawler_config.yaml
@@ -31,3 +31,7 @@ spiders:
   # Abyss
   abyss:
     target_url: "http://3ev4metjirohtdpshsqlkrqcmxq6zu3d7obrdhglpy5jpbr7whmlfgqd.onion/"
+
+  bfdx:
+    boards:
+      "main-board": 1
