feat(backend): Supabase DB 통합 및 데이터 내보내기 기능 추가
- 저장소를 로컬 파일에서 Supabase(PostgreSQL)로 변경
- 중복된 URL은 요청 전에 차단하도록 로직 개선
- CLI에 JSONL/CSV 내보내기 및 알림 토글 기능 추가
- README.md 및 분석 가이드 업데이트

fix: DarkNetArmy ID 생성 로직 및 미들웨어 버그 수정

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # TriCrawl environment variables (example)
 DISCORD_WEBHOOK_URL=
 
+# Supabase (Required for DB & Dedup)
+SUPABASE_URL=
+SUPABASE_KEY=
+
 # Tor proxy
 TOR_PROXY_HOST=127.0.0.1
 TOR_PROXY_PORT=9050
