대시보드 클라우드 세팅
- superset
- oracle cloud

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ DISCORD_WEBHOOK_URL=
 SUPABASE_URL=
 SUPABASE_KEY=
 
+# Superset (Dashboard)
+SUPERSET_CLOUD_URL=
+# SUPERSET_LOCAL_URL=http://127.0.0.1:8088
+TRICRAWL_SUPERSET_MODE=cloud   # cloud | local
+SUPERSET_DEFAULT_PATH=/superset/welcome/
+
 # Tor proxy
 TOR_PROXY_HOST=127.0.0.1
 TOR_PROXY_PORT=9050
