--- a/config/crawler_config.yaml
+++ b/config/crawler_config.yaml
@@ -35,8 +35,10 @@ spiders:
   best_carding_world:
     target_url: "http://bestteermb42clir6ux7xm76d4jjodh3fpahjqgbddbmfrgp4skg2wqd.onion/"
     endpoints:
-      view_forum: "/viewforum.php?f=30"
+      hacked_db: "/viewforum.php?f=30"
+      malware: "/viewforum.php?f=47"
     
     # 게시판별 수집 페이지 수 제한 (Endpoint Key 기준)
     boards:
-      view_forum: 2
+      hacked_db: 3
+      malware: 3
