play news 스파이더 수정
- config 값 추가
- 매칭 키워드 추가
- topic(상세페이지) 크롤링 추가

--- a/config/crawler_config.yaml
+++ b/config/crawler_config.yaml
@@ -32,6 +32,15 @@ spiders:
   abyss:
     target_url: "http://3ev4metjirohtdpshsqlkrqcmxq6zu3d7obrdhglpy5jpbr7whmlfgqd.onion/"
 
+  play_news:
+    target_url: "http://k7kg3jqxang3wh7hnmaiokchk7qoebupfgoik6rha6mjpzwupwtj25yd.onion/"
+    endpoints:
+      news: "/index.php"
+
+    boards:
+      news: 3
+    default_max_pages: 5
+
   best_carding_world:
     target_url: "http://bestteermb42clir6ux7xm76d4jjodh3fpahjqgbddbmfrgp4skg2wqd.onion/"
     endpoints:
