Add Akira ransomware spider

--- a/config/crawler_config.yaml
+++ b/config/crawler_config.yaml
@@ -65,3 +65,6 @@ spiders:
   
   lockbit:
     target_url: "http://lockbit3olp7oetlc4tl5zydnoluphh7fvdt5oa6arcp2757r7xkutid.onion/"
+
+  akira:
+    target_url: "https://akiral2iz6a7qgd3ayp3l6yub7xx2uep76idk3u2kollpj5z3z636bad.onion/"
